Expanded on method section, added appropriate references

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -18,6 +18,8 @@
     "\\usepackage{algorithmic}\n",
     "\\usepackage{graphicx}\n",
     "\\usepackage{textcomp}\n",
+    "\\usepackage{hyperref}\n",
+    "\\usepackage{url}\n",
     "\\def\\BibTeX{{\\rm B\\kern-.05em{\\sc i\\kern-.025em b}\\kern-.08em\n",
     "    T\\kern-.1667em\\lower.7ex\\hbox{E}\\kern-.125emX}}\n",
     "\\begin{document}"
@@ -31,13 +33,6 @@
     "\n",
     "\\title{Predicting Pseudo Random Values Using Convolutional Neural Networks\\\\}\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "raw",
@@ -146,10 +141,9 @@
     "\\section{Methods}\n",
     "\\subsection{Seeding Method}\n",
     "We went with a seed generation method that allowed a way to introduce some minor level of entropy to avoid letting the neural network aimlessly swim through the entropy of a strong seed instead of gaining stochastic insight on the data from the PRNG. \\newline\n",
-    "The seed generation method we chose derives from the concept of using the system time as an element for seed generation. The specific implementation we chose took inspiration from Microsoft's .NET system.datetime.ticks property. [https://docs.microsoft.com/en-us/dotnet/api/system.datetime.ticks?view=netframework-4.8]. We chose to single out this method due to its documentation and unqiue simplicity. System time is widely used as a parameter for modern seed generation methods. To put it more trivially: \"a pseudo random number generator is a deterministic algorithm that, given an initial number (called seed), generates a sequence of numbers that adequately satisfies statistical randomness tests. Since the algorithm is deterministic, the algorithm will always generate the exact same sequence of numbers if it's initialized with the same seed. That's why system time (something that changes all the time) is usually used as the seed for random number generators.\" (https://stackoverflow.com/users/33708/mehrdad-afshari) \\newline\n",
-    "According to the Microsoft documentation, \"A single tick represents one hundred nanoseconds or one ten-millionth of a second. There are 10,000 ticks in a millisecond, or 10 million ticks in a second. The value of this property represents the number of 100-nanosecond intervals that have elapsed since 12:00:00 midnight, January 1, 0001 in the Gregorian calendar.\"  \\newline\n",
-    "We used a fairly similar Python port \n",
-    "(https://stackoverflow.com/questions/29366914/what-is-python-equivalent-of-cs-system-datetime-ticks)\n",
+    "The seed generation method we chose derives from the concept of using the system time as an element for seed generation. The specific implementation we chose took inspiration from Microsoft's .NET system.datetime.ticks property. \\cite{b1} We chose to single out this method due to its documentation and unqiue simplicity. System time is widely used as a parameter for modern seed generation methods. To put it more trivially: \"a pseudo random number generator is a deterministic algorithm that, given an initial number (called seed), generates a sequence of numbers that adequately satisfies statistical randomness tests. Since the algorithm is deterministic, the algorithm will always generate the exact same sequence of numbers if it's initialized with the same seed. That's why system time (something that changes all the time) is usually used as the seed for random number generators.\" \\cite{b2} \\newline\n",
+    "According to the Microsoft documentation, \"A single tick represents one hundred nanoseconds or one ten-millionth of a second. There are 10,000 ticks in a millisecond, or 10 million ticks in a second. The value of this property represents the number of 100-nanosecond intervals that have elapsed since 12:00:00 midnight, January 1, 0001 in the Gregorian calendar.\" \\cite{b1}  \\newline\n",
+    "We used a fairly similar Python port, explained below. \\cite{b3}\n",
     "\\lstset{language=Python}\n",
     "\\begin{lstlisting}[breaklines=true]\n",
     "def ticks(dt):\n",
@@ -172,7 +166,27 @@
     "\n",
     "The original idea was to feed each PRNG different seeds from the same seed generator; however, many PRNG algorithms impose strict seed requirements to pass tests of randomness. Out of the five PRNG methods we implemented, Lagged Fibonacci was the only one that had special seed requirements, so we created a separate seed generator based on the same fundamental ticks generation method, but modified to meet the restrictions. Other PRNGs not implemented in this research that impose seed restrictions include Wichmann-Hill (which accepts three different seeds) and Maximally Periodic Reciprocals (which requires a Sophie Prime), among others.\\newline\n",
     "\n",
-    "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the charactaristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n"
+    "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the charactaristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n",
+    "\n",
+    "\\subsection{PRNG Implementations}\n",
+    "\\subsection{Predictive Network}\n",
+    "NOTE THE Equation will have to be re-done and diagrams re-drawn to reflect our experiment.\n",
+    "The predictor is a convolutional neural network implementing the function ...\n",
+    ": $P(r_{split}) \\mathbb{B}$ 7→B(7)wherersplitis  the  generator’s  output  vector  with  the  last  element  removed.The  last  element  is  used  as  the  corresponding  label  for  the  predictor’s  input.\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\includegraphics[width=1\\linewidth]{./Images/PredictiveModel.png}\n",
+    "\\caption{Predictive Model}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\subsection{Experimental Setup}\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\includegraphics[width=1\\linewidth]{./Images/ModelDiagram.png}\n",
+    "\\caption{Experiment Model}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n"
    ]
   },
   {
@@ -255,6 +269,18 @@
     "% DISCUSSION SECTION\n",
     "\\section{Discussion}\n",
     "Start typing here her is Start typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% REFERENCES\n",
+    "% THIS IS CREATED AUTOMATICALLY\n",
+    "\\bibliographystyle{IEEEtran}\n",
+    "\\bibliography{References} % change if another name is used for References file"
    ]
   },
   {
