--- a/WorkSpace/Paper/References.ipynb
+++ b/WorkSpace/Paper/References.ipynb
@@ -4,13 +4,10 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "@article{b1,\n",
-    "  author = \"L\\^e D{\\~u}ng Trang and Zoghman Mebkhout\",\n",
-    "   title = \"Vari\\'et\\'es caract\\'er\\-istiques et vari\\'et\\'es polaires\",\n",
-    " journal = \"C. R. Acad. Sc. Paris\",\n",
-    "  volume = 296,\n",
-    "    year = 1983,\n",
-    "   pages = \"129--132\"\n",
+    "@electronic{b1,\n",
+    " author   = \"Microsoft\",\n",
+    " title     = \"DateTime.Ticks Property\",\n",
+    " url       = \"https://docs.microsoft.com/en-us/dotnet/api/system.datetime.ticks?view=netframework-4.8\"\n",
     "}"
    ]
   },
@@ -18,14 +15,10 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "@article{b2,\n",
-    "  author = \"Jo{\\\"e}l Biran{\\c c}on and Philippe Maisonobe and Michel Merle\",\n",
-    "   title = \"Localisation de syst\\`emes diff\\'erentiels, stratifications\n",
-    "            de {W}hitney et condition de {T}hom\",\n",
-    " journal = \"Invent. Math.\",\n",
-    "  volume = 117,\n",
-    "    year = 1994,\n",
-    "   pages = \"531--550\"\n",
+    "@electronic{b2,\n",
+    " author   = \"Afshari, Mehrdad\",\n",
+    " title     = \"StackOverflow Comment\",\n",
+    " url       = \"https://stackoverflow.com/questions/1785744/how-do-i-seed-a-random-class-to-avoid-getting-duplicate-random-values#comment2290983_1785752\"\n",
     "}"
    ]
   },
@@ -33,13 +26,10 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "@article{b3,\n",
-    "  author = \"Adam Parusi\\'nski and Piotr Pragacz\",\n",
-    "   title = \"A formula for the {E}uler characteristic of singular hypersurfaces\",\n",
-    " journal = \"J. Alg. Geom.\",\n",
-    "  volume = 4,\n",
-    "    year = 1995,\n",
-    "   pages = \"337-351\"\n",
+    "@electronic{b3,\n",
+    " author   = \"mhawke\",\n",
+    " title     = \"StackOverflow Answer\",\n",
+    " url       = \"https://stackoverflow.com/a/29368771\"\n",
     "}"
    ]
   },
