--- a/WorkSpace/Paper/References.bib
+++ b/WorkSpace/Paper/References.bib
@@ -1,29 +1,19 @@
-@article{b1,
-  author = "L\^e D{\~u}ng Trang and Zoghman Mebkhout",
-   title = "Vari\'et\'es caract\'er\-istiques et vari\'et\'es polaires",
- journal = "C. R. Acad. Sc. Paris",
-  volume = 296,
-    year = 1983,
-   pages = "129--132"
+@electronic{b1,
+ author   = "Microsoft",
+ title     = "DateTime.Ticks Property",
+ url       = "https://docs.microsoft.com/en-us/dotnet/api/system.datetime.ticks?view=netframework-4.8"
 }
 
-@article{b2,
-  author = "Jo{\"e}l Biran{\c c}on and Philippe Maisonobe and Michel Merle",
-   title = "Localisation de syst\`emes diff\'erentiels, stratifications
-            de {W}hitney et condition de {T}hom",
- journal = "Invent. Math.",
-  volume = 117,
-    year = 1994,
-   pages = "531--550"
+@electronic{b2,
+ author   = "Afshari, Mehrdad",
+ title     = "StackOverflow Comment",
+ url       = "https://stackoverflow.com/questions/1785744/how-do-i-seed-a-random-class-to-avoid-getting-duplicate-random-values#comment2290983_1785752"
 }
 
-@article{b3,
-  author = "Adam Parusi\'nski and Piotr Pragacz",
-   title = "A formula for the {E}uler characteristic of singular hypersurfaces",
- journal = "J. Alg. Geom.",
-  volume = 4,
-    year = 1995,
-   pages = "337-351"
+@electronic{b3,
+ author   = "mhawke",
+ title     = "StackOverflow Answer",
+ url       = "https://stackoverflow.com/a/29368771"
 }
 
 @unpublished{b4,
