updated model and experiment graphs

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -183,7 +183,15 @@
     "\\subsection{Experimental Setup}\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
-    "\\includegraphics[width=1\\linewidth]{./Images/ModelDiagram.png}\n",
+    "\\includegraphics[width=1\\linewidth]{./Images/SimpleModel.png}\n",
+    "\\caption{Experiment Model}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\subsection{Experimental Setup}\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\includegraphics[width=1\\linewidth]{./Images/GranularModel.png}\n",
     "\\caption{Experiment Model}\n",
     "\\label{fig:globfig}\n",
     "\\end{figure}\n"
