updated graphics for better clarity

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -184,7 +184,7 @@
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\includegraphics[width=1\\linewidth]{./Images/SimpleModel.png}\n",
-    "\\caption{Experiment Model}\n",
+    "\\caption{Simplified Experimental Model}\n",
     "\\label{fig:globfig}\n",
     "\\end{figure}\n",
     "\n",
@@ -192,7 +192,7 @@
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\includegraphics[width=1\\linewidth]{./Images/GranularModel.png}\n",
-    "\\caption{Experiment Model}\n",
+    "\\caption{Granular Experimental Model}\n",
     "\\label{fig:globfig}\n",
     "\\end{figure}\n"
    ]
