--- a/WorkSpace/Paper/Paper.tex
+++ b/WorkSpace/Paper/Paper.tex
@@ -145,7 +145,7 @@ The predictor is a convolutional neural network implementing the function ...
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\linewidth]{./Images/SimpleModel.png}
-\caption{Experiment Model}
+\caption{Simplified Experimental Model}
 \label{fig:globfig}
 \end{figure}
 
@@ -153,7 +153,7 @@ The predictor is a convolutional neural network implementing the function ...
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\linewidth]{./Images/GranularModel.png}
-\caption{Experiment Model}
+\caption{Granular Experimental Model}
 \label{fig:globfig}
 \end{figure}
 
