--- a/WorkSpace/Paper/References.bib
+++ b/WorkSpace/Paper/References.bib
@@ -1,16 +1,16 @@
-@electronic{b1,
+@electronic{msoftdocs,
  author   = "Microsoft",
  title     = "DateTime.Ticks Property",
  url       = "https://docs.microsoft.com/en-us/dotnet/api/system.datetime.ticks?view=netframework-4.8"
 }
 
-@electronic{b2,
+@electronic{pseudoquote,
  author   = "Afshari, Mehrdad",
  title     = "StackOverflow Comment",
  url       = "https://stackoverflow.com/questions/1785744/how-do-i-seed-a-random-class-to-avoid-getting-duplicate-random-values#comment2290983_1785752"
 }
 
-@electronic{b3,
+@electronic{tickport,
  author   = "mhawke",
  title     = "StackOverflow Answer",
  url       = "https://stackoverflow.com/a/29368771"
@@ -20,6 +20,7 @@
     author = "K. Elissa",
     title = "Title of paper if known"
 }
+http://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf
 
 @article{b5,
     author = "R. Nicole",
