--- a/WorkSpace/Paper/References.ipynb
+++ b/WorkSpace/Paper/References.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "@electronic{b1,\n",
+    "@electronic{msoftdocs,\n",
     " author   = \"Microsoft\",\n",
     " title     = \"DateTime.Ticks Property\",\n",
     " url       = \"https://docs.microsoft.com/en-us/dotnet/api/system.datetime.ticks?view=netframework-4.8\"\n",
@@ -15,7 +15,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "@electronic{b2,\n",
+    "@electronic{pseudoquote,\n",
     " author   = \"Afshari, Mehrdad\",\n",
     " title     = \"StackOverflow Comment\",\n",
     " url       = \"https://stackoverflow.com/questions/1785744/how-do-i-seed-a-random-class-to-avoid-getting-duplicate-random-values#comment2290983_1785752\"\n",
@@ -26,7 +26,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "@electronic{b3,\n",
+    "@electronic{tickport,\n",
     " author   = \"mhawke\",\n",
     " title     = \"StackOverflow Answer\",\n",
     " url       = \"https://stackoverflow.com/a/29368771\"\n",
@@ -40,7 +40,8 @@
     "@unpublished{b4,\n",
     "    author = \"K. Elissa\",\n",
     "    title = \"Title of paper if known\"\n",
-    "}"
+    "}\n",
+    "http://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf"
    ]
   },
   {
