--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -20,6 +20,7 @@
     "\\usepackage{textcomp}\n",
     "\\usepackage{hyperref}\n",
     "\\usepackage{url}\n",
+    "\\usepackage{amsmath}\n",
     "\\def\\BibTeX{{\\rm B\\kern-.05em{\\sc i\\kern-.025em b}\\kern-.08em\n",
     "    T\\kern-.1667em\\lower.7ex\\hbox{E}\\kern-.125emX}}\n",
     "\\begin{document}"
@@ -118,9 +119,7 @@
    "metadata": {},
    "source": [
     "% INTRODUCTION SECTION\n",
-    "\\section{Introduction}\n",
-    "\n",
-    "Start typing here \\cite{b1}."
+    "\\section{Introduction}\n"
    ]
   },
   {
@@ -128,9 +127,7 @@
    "metadata": {},
    "source": [
     "% BACKGROUND SECTION\n",
-    "\\section{Background}\n",
-    "\n",
-    "Start typing here \\cite{b2}."
+    "\\section{Background}\n"
    ]
   },
   {
@@ -140,61 +137,84 @@
     "% METHODS SECTION\n",
     "\\section{Methods}\n",
     "\\subsection{Seeding Method}\n",
-    "We went with a seed generation method that allowed a way to introduce some minor level of entropy to avoid letting the neural network aimlessly swim through the entropy of a strong seed instead of gaining stochastic insight on the data from the PRNG. \\newline\n",
-    "The seed generation method we chose derives from the concept of using the system time as an element for seed generation. The specific implementation we chose took inspiration from Microsoft's .NET system.datetime.ticks property. \\cite{b1} We chose to single out this method due to its documentation and unqiue simplicity. System time is widely used as a parameter for modern seed generation methods. To put it more trivially: \"a pseudo random number generator is a deterministic algorithm that, given an initial number (called seed), generates a sequence of numbers that adequately satisfies statistical randomness tests. Since the algorithm is deterministic, the algorithm will always generate the exact same sequence of numbers if it's initialized with the same seed. That's why system time (something that changes all the time) is usually used as the seed for random number generators.\" \\cite{b2} \\newline\n",
-    "According to the Microsoft documentation, \"A single tick represents one hundred nanoseconds or one ten-millionth of a second. There are 10,000 ticks in a millisecond, or 10 million ticks in a second. The value of this property represents the number of 100-nanosecond intervals that have elapsed since 12:00:00 midnight, January 1, 0001 in the Gregorian calendar.\" \\cite{b1}  \\newline\n",
-    "We used a fairly similar Python port, explained below. \\cite{b3}\n",
-    "\\lstset{language=Python}\n",
-    "\\begin{lstlisting}[breaklines=true]\n",
-    "def ticks(dt):\n",
-    "    return (dt-datetime(1,1,1)).total_seconds()*10000000\n",
-    "\\end{lstlisting} \n",
+    "We went with a seed generation method that allowed a way to introduce some minor level of entropy to avoid letting the neural network aimlessly swim through the entropy of a strong seed instead of gaining stochastic insight on the data from the PRNG.\n",
     "\n",
-    "Porting side effects include:\n",
+    "The seed generation method we chose derives from the concept of using the system time as an element for seed generation. The specific implementation we chose took inspiration from Microsoft's .NET system.datetime.ticks property. \\cite{msoftdocs} We chose to single out this method due to its documentation and unique simplicity. System time is widely used as a parameter for modern seed generation methods. \n",
+    "\n",
+    "To put it more trivially: \"a pseudo-random number generator is a deterministic algorithm that, given an initial number (called a seed), generates a sequence of numbers that adequately satisfy statistical randomness tests. Since the algorithm is deterministic, the algorithm will always generate the exact same sequence of numbers if it's initialized with the same seed. That's why system time (something that changes all the time) is usually used as the seed for random number generators.\" \\cite{pseudoquote}\n",
+    "\n",
+    "According to the Microsoft documentation, \"A single tick represents one hundred nanoseconds or one ten-millionth of a second. There are 10,000 ticks in a millisecond, or 10 million ticks in a second. The value of this property represents the number of 100-nanosecond intervals that have elapsed since 12:00:00 midnight, January 1, 0001 in the Gregorian calendar.\" \\cite{msoftdocs}\n",
+    "\n",
+    "We used a fairly similar Python port, as seen in Figure ~\\ref{fig:Default Seeding Method}\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\includegraphics[width=1\\linewidth]{./Images/Ticks.png}\n",
+    "\\caption{Default Seeding Method}\n",
+    "\\label{fig:Default Seeding Method}\n",
+    "\\end{figure}\n",
+    "\n",
+    "This python port of Microsoft's tick method can be attributed to \"mhawke\" on StackOverflow. \\cite{tickport} The author had some noteworthy comments about this implementation, namely some porting side effects:\n",
     "\\begin{enumerate}\n",
     "    \\item UTC times are assumed.\n",
-    "    \\item The resolution of the datetime object is given by datetime.resolution, which is datetime.timedelta(0, 0, 1) or microsecond resolution (1e-06 seconds). CSharp Ticks are purported to be 1e-07 seconds.\n",
+    "    \\item The resolution of the DateTime object is given by DateTime.resolution, which is DateTime.timedelta(0, 0, 1) or microsecond resolution (1e-06 seconds). CSharp Ticks are purported to be 1e-07 seconds.\n",
     "\\end{enumerate}\n",
     "\n",
-    "Additional changes we made to our implementation:\n",
+    "For experimental needs, we made additional changes to the implementation:\n",
     "\\begin{enumerate}\n",
     "    \\item Changing start time from January 1, 0001 to January 1, 1970, which effectively reduced the length of the seed for experimental purposes.\n",
-    "    \\item Slicing last 6 digits of the ticks result to acquire more digit variation for frequent invocation.\n",
+    "    \\item Slicing the last 6 digits of the ticks result to acquire more digit variation for frequent invocation.\n",
     "\\end{enumerate}\n",
     "\n",
-    "This final method allows enough spread between frequently retreived ticks, where we are assuming reasonable pseudo-unpredictabililty. This serves as a simplistic but constantly changing control mechanism for being able to seed PRNGs and test experimental outcomes. While not the most cryptographically strong, we needed a way to have some controlled aspect of seed generation to feed into generators of varying cryptographic complexity (to have some baseline of comparison).\\newline\n",
+    "The final modified method allows enough spread between frequently retrieved ticks, where we are assuming reasonable pseudo-unpredictability. This serves as a simplistic but constantly changing control mechanism for being able to seed PRNGs and test experimental outcomes. While not the most cryptographically strong, we needed a way to have some controlled aspect of seed generation to feed into generators of varying cryptographic complexity (to have some baseline of comparison).\n",
     "\n",
-    "The original idea was to feed each PRNG different seeds from the same seed generator; however, many PRNG algorithms impose strict seed requirements to pass tests of randomness. Out of the five PRNG methods we implemented, Lagged Fibonacci was the only one that had special seed requirements, so we created a separate seed generator based on the same fundamental ticks generation method, but modified to meet the restrictions. Other PRNGs not implemented in this research that impose seed restrictions include Wichmann-Hill (which accepts three different seeds) and Maximally Periodic Reciprocals (which requires a Sophie Prime), among others.\\newline\n",
+    "The original idea was to feed each PRNG different seeds from the same seed generator; however, many PRNG algorithms impose strict seed requirements to pass tests of randomness. Out of the five PRNG methods we implemented, Lagged Fibonacci was the only one that had special seed requirements, so we created a separate seed generator based on the same fundamental ticks generation method, but modified to meet the restrictions. Other PRNGs not implemented in this research that impose seed restrictions include Wichmann-Hill (which accepts three different seeds) and Maximally Periodic Reciprocals (which requires a Sophie Prime), among others.\n",
     "\n",
-    "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the charactaristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n",
+    "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the characteristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n",
     "\n",
     "\\subsection{PRNG Implementations}\n",
-    "\\subsection{Predictive Network}\n",
-    "NOTE THE Equation will have to be re-done and diagrams re-drawn to reflect our experiment.\n",
-    "The predictor is a convolutional neural network implementing the function ...\n",
-    ": $P(r_{split}) \\mathbb{B}$ 7→B(7)wherersplitis  the  generator’s  output  vector  with  the  last  element  removed.The  last  element  is  used  as  the  corresponding  label  for  the  predictor’s  input.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\\subsection{Experimental Setup}\n",
+    "\n",
+    "The mathematical description of our experiment can be outlined below. \n",
+    "\\begin{equation}\n",
+    "\\{0, G(S_n, k) \\rightarrow \\mathbb{L}_n \\rightarrow Split(\\mathbb{L}_n) \\rightarrow \\mathbb{X}_n,\\mathbb{Y}_n , n \\}\n",
+    "\\end{equation}\n",
+    "Where the outer set builder notation iterates the following from 0 to n:\n",
+    "Where $G$ is the chosen PRNG, $S_n$ is nth seed in the iteration, and $k$ is the length of the desired output vector, $\\mathbb{L}_n$, it is implied that $\\mathbb{L}_n$ is the output vector of $G$ and $\\mathbb{X}_n$ is $\\mathbb{L}_n$ with the last element removed. $\\mathbb{Y}_n$  is  used  as  the  corresponding  label for $\\mathbb{X}_n$.\n",
+    "\n",
+    "The predictor is a convolutional neural network implementing the function...\n",
+    "\\begin{equation}\n",
+    "P(\\mathbb{X},\\mathbb{Y}): \\mathbb{X} \\rightarrow \\mathbb{B} \\simeq \\mathbb{Y}\n",
+    "\\end{equation}\n",
+    "Where $\\mathbb{X}_n$ represents a set containing $n$ sets of $k-1$ values generated from a PRNG where each $\\mathbb{X}_n$ set is dervied from a different seed. $\\mathbb{Y}_n$ represents a set containing $n$ sets of $kth$ values with a direct mapping to each $\\mathbb{X}_n$ such that $\\mathbb{X}_n \\rightarrow \\mathbb{Y}_n$. $P$, the predictive neural network, takes in $\\mathbb{X}_n$ and $\\mathbb{Y}_n$, yields a new set $\\mathbb{B}_n$ implied from $\\mathbb{X}_n$, where the model trains $\\mathbb{B}_n$ to be similar or equal to $\\mathbb{Y}_n$ based on the back-propagation due to previous predictions. \n",
+    "\n",
+    "For a simplified graphical representation of the latter description, please reference the predictive model in Figure ~\\ref{fig:Predictive Model}, the simplified experimental model in Figure ~\\ref{fig:Simplified Experimental Model} , and the granular view of the experimental model in Figure ~\\ref{fig:Granular Experimental Model}.\n",
+    "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\includegraphics[width=1\\linewidth]{./Images/PredictiveModel.png}\n",
     "\\caption{Predictive Model}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:Predictive Model}\n",
     "\\end{figure}\n",
     "\n",
-    "\\subsection{Experimental Setup}\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\includegraphics[width=1\\linewidth]{./Images/SimpleModel.png}\n",
     "\\caption{Simplified Experimental Model}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:Simplified Experimental Model}\n",
     "\\end{figure}\n",
     "\n",
-    "\\subsection{Experimental Setup}\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\includegraphics[width=1\\linewidth]{./Images/GranularModel.png}\n",
     "\\caption{Granular Experimental Model}\n",
-    "\\label{fig:globfig}\n",
-    "\\end{figure}\n"
+    "\\label{fig:Granular Experimental Model}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\subsection{Experimental Execution}\n"
    ]
   },
   {
@@ -208,65 +228,65 @@
     "\\centering\n",
     "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Middle_Square_Reg.png}\n",
-    "\\label{fig:subfig1}}\n",
+    "\\label{fig:MS_A}}\n",
     "\\qquad\n",
     "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Middle_Square_Loss.png}\n",
-    "\\label{fig:subfig2}}\n",
+    "\\label{fig:MS_B}}\n",
     "\\caption{Middle Square Results}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:MS}\n",
     "\\end{figure}\n",
     "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Linear_Cong_Reg.png}\n",
-    "\\label{fig:subfig1}}\n",
+    "\\label{fig:LCG_A}}\n",
     "\\qquad\n",
     "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Linear_Cong_Loss.png}\n",
-    "\\label{fig:subfig2}}\n",
+    "\\label{fig:LCG_B}}\n",
     "\\caption{Linear Congruential Results}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:LCG}\n",
     "\\end{figure}\n",
     "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Lagged_Fib_Reg.png}\n",
-    "\\label{fig:subfig1}}\n",
+    "\\label{fig:LF_A}}\n",
     "\\qquad\n",
     "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Lagged_Fib_Loss.png}\n",
-    "\\label{fig:subfig2}}\n",
+    "\\label{fig:LF_B}}\n",
     "\\caption{Lagged Fibonacci Results}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:LF}\n",
     "\\end{figure}\n",
     "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Park_Miller_Reg.png}\n",
-    "\\label{fig:subfig1}}\n",
+    "\\label{fig:PM_A}}\n",
     "\\qquad\n",
     "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Park_Miller_Loss.png}\n",
-    "\\label{fig:subfig2}}\n",
+    "\\label{fig:PM_B}}\n",
     "\\caption{Park Miller Results}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:PM}\n",
     "\\end{figure}\n",
     "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Twister_Reg.png}\n",
-    "\\label{fig:subfig1}}\n",
+    "\\label{fig:MT_A}}\n",
     "\\qquad\n",
     "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
     "\\includegraphics[width=0.4\\linewidth]{./Images/Twister_Loss.png}\n",
-    "\\label{fig:subfig2}}\n",
+    "\\label{fig:MT_B}}\n",
     "\\caption{Mersenne Twister Results}\n",
-    "\\label{fig:globfig}\n",
+    "\\label{fig:MT}\n",
     "\\end{figure}"
    ]
   },
