added boilerplate for PRNG descriptions and notes.

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -173,8 +173,77 @@
     "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the characteristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n",
     "\n",
     "\\subsection{PRNG Implementations}\n",
+    "Middle Square:\n",
+    "Description:\n",
+    "...\n",
+    "Notes:\n",
+    "A note on weakness: For a generator of n-digit numbers, the period can be no longer than 8n. If the middle n digits are all zeroes, \n",
+    "the generator then outputs zeroes forever. If the first half of a number in the sequence is zeroes, the subsequent\n",
+    "numbers will be decreasing to zero. While these runs of zero are easy to detect, they occur too frequently for this\n",
+    "method to be of practical use. The middle-squared method can also get stuck on a number other than zero.\n",
     "\n",
+    "An already seen list is NOT included in the original middle square method and will not be used.\n",
     "\n",
+    "Linear Congruential:\n",
+    "Description:\n",
+    "...\n",
+    "Notes:\n",
+    "The generator is not sensitive to the choice of c, \n",
+    "as long as it is relatively prime to the modulus \n",
+    "(e.g. if m is a power of 2, then c must be odd), \n",
+    "so the value c=1 is commonly chosen.\n",
+    "\n",
+    "If c = 0, the generator is often called a multiplicative\n",
+    "congruential generator (MCG), or Lehmer RNG. If c ≠ 0, the\n",
+    "method is called a mixed congruential generator.\n",
+    "\n",
+    "Parameters were chosen based on $2^32$ in table 2 of \n",
+    "\\url{https://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=BBA0C7ED3ADAB606642BB8D939774B4F?doi=10.1.1.34.1024&rep=rep1&type=pdf}\n",
+    "\n",
+    "Lagged Fibonacci:\n",
+    "Description:\n",
+    "...\n",
+    "Notes:\n",
+    "This is two tap, not three tap...\n",
+    "It's a \"lagged\" generator, because \"j\" and \"k\" lag behind the generated pseudorandom value. \n",
+    "Also, this is called a \"two-tap\" generator, in that you are using 2 values in the sequence \n",
+    "to generate the pseudorandom number. However, a two-tap generator has some problems with \n",
+    "randomness tests, such as the Birthday Spacings. Apparently, creating a \"three-tap\" generator\n",
+    "addresses this problem.\n",
+    "\n",
+    "Park Miller:\n",
+    "Description:\n",
+    "...\n",
+    "Notes:\n",
+    "The Lehmer generator is an lcg. Park Miller is a specific lcg.\n",
+    "    \n",
+    "The Lehmer random number generator (named after D. H. Lehmer), \n",
+    "sometimes also referred to as the Park–Miller random number generator\n",
+    "(after Stephen K. Park and Keith W. Miller), is a type of linear congruential generator (LCG).\n",
+    "\n",
+    "Park miller generator, because they essentially the same.\n",
+    "Park-miller request the use of certain modulos.\n",
+    "Lehmer is an lcg where c = 0...\n",
+    "If c = 0, the generator is often called a multiplicative congruential generator (MCG),\n",
+    "or Lehmer RNG. If c ≠ 0, the method is called a mixed congruential generator.\n",
+    "\n",
+    "While the Lehmer RNG can be viewed as a particular case of the linear congruential generator\n",
+    "with c=0, it is a special case that implies certain restrictions and properties.\n",
+    "In particular, for the Lehmer RNG, the initial seed must be coprime to the modulus m that is\n",
+    "not required for LCGs in general. \n",
+    "\n",
+    "The choice of the modulus m and the multiplier a is also more restrictive for the Lehmer RNG.\n",
+    "In contrast to LCG, the maximum period of the Lehmer RNG equals m−1 and it is such when m is \n",
+    "prime and a is a primitive root modulo m. \n",
+    "\n",
+    "Mersenne Twister:\n",
+    "Description:\n",
+    "...\n",
+    "Notes:\n",
+    "Closely related with LFSRs. In its MT19937 implementation is probably the most commonly used modern PRNG. \n",
+    "Default generator in the Python language starting from version 2.3. \n",
+    "\n",
+    "We used numpy's version of the Mersenne Twister.\n",
     "\n",
     "\\subsection{Experimental Setup}\n",
     "\n",
