--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -247,18 +247,26 @@
     "\n",
     "\\subsection{Experimental Setup}\n",
     "\n",
-    "The mathematical description of our experiment can be outlined below. \n",
-    "\\begin{equation}\n",
-    "\\{0, G(S_n, k) \\rightarrow \\mathbb{L}_n \\rightarrow Split(\\mathbb{L}_n) \\rightarrow \\mathbb{X}_n,\\mathbb{Y}_n , n \\}\n",
-    "\\end{equation}\n",
-    "Where the outer set builder notation iterates the following from 0 to n:\n",
-    "Where $G$ is the chosen PRNG, $S_n$ is nth seed in the iteration, and $k$ is the length of the desired output vector, $\\mathbb{L}_n$, it is implied that $\\mathbb{L}_n$ is the output vector of $G$ and $\\mathbb{X}_n$ is $\\mathbb{L}_n$ with the last element removed. $\\mathbb{Y}_n$  is  used  as  the  corresponding  label for $\\mathbb{X}_n$.\n",
     "\n",
-    "The predictor is a convolutional neural network implementing the function...\n",
-    "\\begin{equation}\n",
-    "P(\\mathbb{X},\\mathbb{Y}): \\mathbb{X} \\rightarrow \\mathbb{B} \\simeq \\mathbb{Y}\n",
-    "\\end{equation}\n",
-    "Where $\\mathbb{X}_n$ represents a set containing $n$ sets of $k-1$ values generated from a PRNG where each $\\mathbb{X}_n$ set is dervied from a different seed. $\\mathbb{Y}_n$ represents a set containing $n$ sets of $kth$ values with a direct mapping to each $\\mathbb{X}_n$ such that $\\mathbb{X}_n \\rightarrow \\mathbb{Y}_n$. $P$, the predictive neural network, takes in $\\mathbb{X}_n$ and $\\mathbb{Y}_n$, yields a new set $\\mathbb{B}_n$ implied from $\\mathbb{X}_n$, where the model trains $\\mathbb{B}_n$ to be similar or equal to $\\mathbb{Y}_n$ based on the back-propagation due to previous predictions. \n",
+    "The following is a vastly informal mathematical representation of our experimental model, using a loose coupling of TLA+ notation and some set-builder theory. Further explanations and graphics will follow to aide in interpretation of the design of the experimental setup.\n",
+    "\n",
+    "Let $n$ be any arbitrary natural number such that $\\{n \\in \\mathbb{N}\\}$.\n",
+    "Let $E$ represent the experiment definition.\n",
+    "Let $seed$ be a function such that when called will return a seed.\n",
+    "Given $k$ and $S_n$, let $prng$ be a function such that when called will return a set of pseudo random numbers,\n",
+    "dervied from an initial seed $S_n$ and a given algorithm, where the length of the set is $k$.\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\includegraphics[width=.5\\linewidth]{./Images/ModelNotated.png}\n",
+    "\\caption{Notated Experiment Model}\n",
+    "\\label{fig:Notated Experiment Model}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\n",
+    "Given an enumerated set, $\\mathbb{N}$,\n",
+    "where $prng$ is the chosen PRNG, $S_n$ is nth seed in the iteration, and $k$ is the length of the desired output vector ($\\mathbb{L}_n$) of $prng$,\n",
+    "$\\mathbb{X}_n$ represents an enumerated set containing $n$ sets of $k-1$ values generated from a PRNG ($prng$) and each $\\mathbb{X}_n$ set is dervied from a different seed. $\\mathbb{Y}_n$ represents a set containing $n$ sets of $k$th values with a direct mapping to each $\\mathbb{X}_n$ such that $\\mathbb{X}_n \\mapsto \\mathbb{Y}_n$. $P$ a predictor function that represents a convolutional neural network, which takes in $\\mathbb{X}_n$ and $\\mathbb{Y}_n$, yields a new set $\\mathbb{B}_n$ implied from $\\mathbb{X}_n$, where the model trains $\\mathbb{B}_n$ to be similar or equal to $\\mathbb{Y}_n$ based on back-propagation due to previous predictions, thus using supervised learning to build a regression model.\n",
     "\n",
     "For a simplified graphical representation of the latter description, please reference the predictive model in Figure ~\\ref{fig:Predictive Model}, the simplified experimental model in Figure ~\\ref{fig:Simplified Experimental Model} , and the granular view of the experimental model in Figure ~\\ref{fig:Granular Experimental Model}.\n",
     "\n",
@@ -283,7 +291,9 @@
     "\\label{fig:Granular Experimental Model}\n",
     "\\end{figure}\n",
     "\n",
-    "\\subsection{Experimental Execution}\n"
+    "\\subsection{Experimental Execution}\n",
+    "Highlight configuration parameters used to execute the experiment.\n",
+    "Make a note the reasoning behind our small num of epochs and general reasoning behind all parameters. \n"
    ]
   },
   {
