--- a/WorkSpace/Paper/Paper.tex
+++ b/WorkSpace/Paper/Paper.tex
@@ -210,18 +210,26 @@ We used numpy's version of the Mersenne Twister.
 
 \subsection{Experimental Setup}
 
-The mathematical description of our experiment can be outlined below. 
-\begin{equation}
-\{0, G(S_n, k) \rightarrow \mathbb{L}_n \rightarrow Split(\mathbb{L}_n) \rightarrow \mathbb{X}_n,\mathbb{Y}_n , n \}
-\end{equation}
-Where the outer set builder notation iterates the following from 0 to n:
-Where $G$ is the chosen PRNG, $S_n$ is nth seed in the iteration, and $k$ is the length of the desired output vector, $\mathbb{L}_n$, it is implied that $\mathbb{L}_n$ is the output vector of $G$ and $\mathbb{X}_n$ is $\mathbb{L}_n$ with the last element removed. $\mathbb{Y}_n$  is  used  as  the  corresponding  label for $\mathbb{X}_n$.
 
-The predictor is a convolutional neural network implementing the function...
-\begin{equation}
-P(\mathbb{X},\mathbb{Y}): \mathbb{X} \rightarrow \mathbb{B} \simeq \mathbb{Y}
-\end{equation}
-Where $\mathbb{X}_n$ represents a set containing $n$ sets of $k-1$ values generated from a PRNG where each $\mathbb{X}_n$ set is dervied from a different seed. $\mathbb{Y}_n$ represents a set containing $n$ sets of $kth$ values with a direct mapping to each $\mathbb{X}_n$ such that $\mathbb{X}_n \rightarrow \mathbb{Y}_n$. $P$, the predictive neural network, takes in $\mathbb{X}_n$ and $\mathbb{Y}_n$, yields a new set $\mathbb{B}_n$ implied from $\mathbb{X}_n$, where the model trains $\mathbb{B}_n$ to be similar or equal to $\mathbb{Y}_n$ based on the back-propagation due to previous predictions. 
+The following is a vastly informal mathematical representation of our experimental model, using a loose coupling of TLA+ notation and some set-builder theory. Further explanations and graphics will follow to aide in interpretation of the design of the experimental setup.
+
+Let $n$ be any arbitrary natural number such that $\{n \in \mathbb{N}\}$.
+Let $E$ represent the experiment definition.
+Let $seed$ be a function such that when called will return a seed.
+Given $k$ and $S_n$, let $prng$ be a function such that when called will return a set of pseudo random numbers,
+dervied from an initial seed $S_n$ and a given algorithm, where the length of the set is $k$.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=.5\linewidth]{./Images/ModelNotated.png}
+\caption{Notated Experiment Model}
+\label{fig:Notated Experiment Model}
+\end{figure}
+
+
+Given an enumerated set, $\mathbb{N}$:
+Where $prng$ is the chosen PRNG, $S_n$ is nth seed in the iteration, and $k$ is the length of the desired output vector ($\mathbb{L}_n$) of $prng$. 
+$\mathbb{X}_n$ represents a set containing $n$ sets of $k-1$ values generated from a PRNG ($prng$) and each $\mathbb{X}_n$ set is dervied from a different seed. $\mathbb{Y}_n$ represents a set containing $n$ sets of $k$th values with a direct mapping to each $\mathbb{X}_n$ such that $\mathbb{X}_n \mapsto \mathbb{Y}_n$. $P$ a predictor function that represents a convolutional neural network, which takes in $\mathbb{X}_n$ and $\mathbb{Y}_n$, yields a new set $\mathbb{B}_n$ implied from $\mathbb{X}_n$, where the model trains $\mathbb{B}_n$ to be similar or equal to $\mathbb{Y}_n$ based on back-propagation due to previous predictions, thus using supervised learning to build a regression model.
 
 For a simplified graphical representation of the latter description, please reference the predictive model in Figure ~\ref{fig:Predictive Model}, the simplified experimental model in Figure ~\ref{fig:Simplified Experimental Model} , and the granular view of the experimental model in Figure ~\ref{fig:Granular Experimental Model}.
 
@@ -247,6 +255,8 @@ For a simplified graphical representation of the latter description, please refe
 \end{figure}
 
 \subsection{Experimental Execution}
+Highlight configuration parameters used to execute the experiment.
+Make a note the reasoning behind our small num of epochs and general reasoning behind all parameters. 
 
 
 % RESULTS SECTION
